<resources>
    <string name="app_name">ISaT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_version">3.1.11</string>

    <string name="menu_map">实时地图</string>
    <string name="menu_bbs">中文论坛</string>
    <string name="menu_wiki">游戏维基</string>
    <string name="menu_web">问答服务</string>
    <string name="menu_about">关于应用</string>
    <string name="author">App Made by Git-a-Live</string>
    <string name="logo">Logo Designed by Mort</string>
    <string name="version">Version: 3.1.11</string>
    <string name="extend">extend</string>
    <string name="update_message">1.移除必应搜索；\n2.加入物品维基；\n3.修复部分bug。</string>

    <string name="bbs_url">https://www.mcbbs.net/</string>
    <string name="map_url">http://txyminecraft.club:8123/</string>
    <string name="web_url">http://neverlag.gitee.io/minecraft-wiki/#/</string>
    <string name="wiki_url">https://minecraft-zh.gamepedia.com/Minecraft_Wiki</string>
    <string name="bbs_name">BBS</string>
    <string name="map_name">Map</string>
    <string name="web_name">Web</string>
    <string name="wiki_name">Wiki</string>
</resources>
